# tradingBot

./: .env.example  .gitignore  README.md  TODO.md  config.yaml  main.py  pyproject.toml
ai/: researcher.py  trading_advisor.py
analysis/: fibonacci.py  greeks.py  indicators.py  patterns.py  stage_analysis.py
backtest/: broker_sim.py  engine.py  report.py
broker/: client.py  market_data.py  portfolio.py
core/: config.py  decision_log.py  events.py  exceptions.py  logging.py
dashboard/: app.py
dashboard/static/: index.html
data/: earnings_calendar.py  feed.py  historical.py  market_regime.py  normalizer.py  peg_detector.py  watchlist_provider.py
database/: migrations.py  models.py  repository.py
docs/: HOW_IT_WORKS.md  decision_flow.md  operations.md
execution/: executor.py  order_builder.py
monitoring/: alerting.py
portfolio/: performance.py  portfolio.py
risk/: position_sizer.py  risk_manager.py
scheduler/: scheduler.py
scripts/: llm_value_report.py  manage.sh  replay_trade.py
strategies/: base.py  breakout.py  mean_reversion.py  momentum.py
strategies/swing/: swing_strategy.py
strategies/wheel/: covered_call_leg.py  csp_leg.py  wheel_strategy.py
tests/fixtures/: sample_bars.json
tests/unit/: test_alerter_calls.py  test_assignment.py  test_cc_downside_exit.py  test_collateral_cap.py  test_dashboard_api.py  test_decision_log.py  test_fill_metadata_enrichment.py  test_gap_down_quote.py  test_happy_sad_panda.py  test_indicators.py  test_iv_history_from_chain.py  test_market_regime.py  test_options_chain.py  test_options_executor.py  (+15 more)
(+9 files in other folders)
