[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingbot"
version = "0.1.0"
description = "Algorithmic trading bot using Alpaca"
requires-python = ">=3.11"
dependencies = [
    # Brokerage
    "alpaca-py>=0.26.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b0",
    # Config / validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # Async HTTP
    "aiohttp>=3.9.0",
    # Logging
    "loguru>=0.7.2",
    # Options math
    "scipy>=1.12.0",
    # Timezone
    "pytz>=2024.1",
    # AI / Claude API
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
